--- a/build.gradle
+++ b/build.gradle
@@ -10,12 +10,10 @@ repositories {
 }
 
 dependencies {
-
-    implementation 'log4j:log4j:1.2.12'
+    implementation 'org.apache.commons:commons-text:1.11.0'
 
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
-    testImplementation 'org.mockito:mockito-junit-jupiter:5.14.2'
 }
 
 test {
