--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,8 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.apache.commons:commons-text:1.11.0'
+    implementation 'org.apache.commons:commons-text:1.14.0'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.20.0'
 
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
