--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,8 @@ dependencies {
     implementation 'org.apache.commons:commons-text:1.14.0'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.20.0'
 
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 test {
